Signal testing thread needs to start before signal processing thread

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Server Programmability
    • Fully Compatible
    • ALL
    • Programmability 2024-12-09
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In SERVER-94944, we added a thread to test EINTR resilience (the "signal testing thread") that can be enabled at server startup time via a failpoint. However, this thread starts before the signal handling thread sets up the mask and takes over certain signals. The effect of this is that the testing thread can respond to certain signals instead of the signal processing thread, which has a number of bad implications. For example, sending SIGTERM with the testing thread enabled causes the server to exit with code 15 instead of 0, which confuses the test infrastructure.

      The bug is only reachable with a specific failpoint enabled, so it's not a high risk issue. However, it does prevent us from using the failpoint for its intended testing purpose.

            Assignee:
            Ryan Berryhill
            Reporter:
            Ryan Berryhill
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: