SERVER-97612 Make signal processing thread start before signal testing thread (#29599)

GitOrigin-RevId: ce3295aaa5d305e148ad2d03bb4a65b8889fb9fc